--- a/css/style.css
+++ b/css/style.css
@@ -14,16 +14,35 @@ body {
     min-height: 100vh;
 }
 
+.display-screen {
+    display: flex;
+    width: 340px;
+    height: 120px;
+    background-color: lightgray;
+    margin-left: 30px;
+    margin-top: 2px;
+}
+
 #calculator {
     display: flex;
+    justify-content: center;
+    justify-items: center;
     width: 600px;
     flex-wrap: wrap;
+    border: black;
+    background-color: black;
+    padding: 20px;
 }
 
 .numbers {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 150px;
-    width: 150px;
+    height: 120px;
+    width: 120px;
+    margin: 2px;
+}
+
+.clear {
+    margin-bottom: 30px;
 }
